tests/NormalTests/paczka1/fuzzy1/21267075.err
Error in line 3: th5rUWWb A567 93,19
Error in line 7: A567 A567 27,5
Error in line 2: kURD A888 50,6
Error in line 10: kURD S40 89,3
Error in line 25: i2 S40 71,8
Error in line 14: i2L S40 58,4
